🐞 fix(CI): Add install step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,8 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-
-
-
+      - name: Install Dependencies
+        run: pnpm install
       - name: Build project
         run: pnpm build
 
