🐞 fix(config): meta defined

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,5 +11,9 @@
       "@/*": ["./src/*"]
     },
     "types": ["vuetify"]
-  }
+  },
+  "files": [
+    "src/**/*.ts",
+    "src/Meta.ts"
+  ]
 }
