--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -7,5 +7,9 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
     "lib": [],
     "types": ["node", "jsdom"]
-  }
+  },
+  "files": [
+    "src/**/*.ts",
+    "src/Meta.ts"
+  ]
 }
