🐎 ci(Flows): CI Token

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    name: Deploy-IPC-Master
+    name: Build-IPC-Master
     runs-on: ubuntu-latest
 
     steps:
@@ -37,7 +37,7 @@ jobs:
           path: ./dist
 
   deploy:
-    name: Deploy
+    name: Deploy-IPC-Master
     needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
@@ -52,5 +52,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.DEPLOY_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
